--- a/redePets-frontend/package.json
+++ b/redePets-frontend/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-order-pipe": "^2.1.1",
+    "node": "^16.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
