--- a/redePets-backend/src/main/resources/application.properties
+++ b/redePets-backend/src/main/resources/application.properties
@@ -3,3 +3,14 @@ spring.datasource.url=jdbc:mysql://localhost/db_redePets?createDatabaseIfNotExis
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+
+#spring.mvc.view.prefix=/public/
+#spring.mvc.view.suffix=.html	
+#
+#server.compression.enabled=true
+#server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+#server.compression.min-response-size=1024
+#
+#spring.jpa.generate-ddl=true
+#spring.datasource.url=${JDBC_DATASOURCE_URL}
+#spring.jpa.show-sql=true
